--- a/tex/ch4.tex
+++ b/tex/ch4.tex
@@ -73,17 +73,6 @@ generation and problem solution.
 PuLP is an open-source python library which acts as an API to several
 (MI)LP solvers, both commercial and open source.
 
-\section{Objective Function}\label{S.objfn}
-
-The vessel selection problem may be described as a series of linear constraints.
-These constraints are applied to find the optimium value of an objective
-function, which we seek to \emph{minimise}.
-The objective function is the total cost of vessels, which is given by:
-
-\begin{equation}
-    Z = \sum_{m \in M} \sum_{p \in P} c_m \boldsymbol{y}_{mp}
-\end{equation}
-
 \section{Slots}\label{S.slots}
 
 To model the probem as an MILP problem, we must introduce the concept of
@@ -106,6 +95,40 @@ empty.
 Note that slots do not have any physical significance, i.e. there is no floor
 space assigned to notional slots, only to actual vessels.
 
+\section{Objective Function}\label{S.objfn}
+
+The vessel selection problem may be described as a series of linear constraints.
+These constraints are applied to find the optimium value of an objective
+function, which we seek to minimise.
+The primary objective function is the total cost of vessels.
+We find this by summing the vessel costs for all vessels present in slots.
+Recall that the vessel data set contains entries for $M$ vessel sizes, each
+of which has an associated cost, $c_{m}$.
+
+We now introduce the first decision variable, $\boldsymbol{y}_{mp}$.
+This a binary decision variable (matrix) with dimensions $M \times P$.
+Note that binary decision variables may only take the values 0 and 1, i.e.
+\begin{equation}
+    \boldsymbol{y}_{mp} \in \left\{ 0, 1 \right\} \quad \forall m \in M \quad
+    \forall p \in P
+\end{equation}
+
+The possible states of $\boldsymbol{y}_{mp}$ may be described thus:
+
+\begin{equation}
+    \boldsymbol{y}_{mp} =
+    \begin{cases}
+        1 \implies \text{instance of vessel $m$ in slot $p$}\\
+        0 \implies \text{otherwise}
+    \end{cases}
+\end{equation}
+
+We can now describe the objective function, which gives the objective function
+value, $\boldsymbol{Z}$.  The objective is to minimise $\boldsymbol{Z}$.
+
+\begin{equation}
+    \boldsymbol{Z} = \sum_{m \in M} \sum_{p \in P} c_m \boldsymbol{y}_{mp}
+\end{equation} 
 
 \section{Basic Problem}\label{S.basicprob}
 
@@ -117,11 +140,31 @@ realistic.
 \subsection{Buffers Dedicated to Slots}\label{SS.constr1}
 
 The first constraint to be added is the limitation that a buffer must be 
-prepared in exactly one slot. 
-\textbf{TODO: Explanation of slots, schematic etc. before this point.}
-This constraint means that we must indeed preprare each buffer once per cycle
-and also that the buffer is always prepared in the same vessel -- i.e. vessel
+prepared in exactly one slot.
+This constraint means that we must preprare each buffer once per cycle
+and also that the buffer is always prepared in the same slot -- i.e. slot
 selection for every cycle is identical.
+
+We introduce a new binary decision variable, $\boldsymbol{x}_{np}$, which takes
+a value of 1 if buffer n is prepared in slot p, and takes a value of 0 
+otherwise, i.e.
+
+\begin{equation}
+    \boldsymbol{x}_{np} \in \left\{ 0, 1 \right\} \quad \forall n \in N \quad
+    \forall p \in P
+\end{equation}
+
+The possible states of $\boldsymbol{x}_{np}$ may be described thus:
+
+\begin{equation}
+    \boldsymbol{x}_{np} =
+    \begin{cases}
+        1 \implies \text{buffer $n$ prepared in slot $p$}\\
+        0 \implies \text{otherwise}
+    \end{cases}
+\end{equation}
+
+The following constraint can now be defined:
 
 \begin{equation}
     \sum_{p \in P} \boldsymbol{x}_{np} = 1 \quad \forall n \in N
@@ -133,7 +176,7 @@ The second constraint to be added is the requirement that at most one vessel
 may inhabit a given slot.
 This is not directly analagous to the first constraint -- it is possible to 
 use the same \emph{sized} vessel in many slots, but a maximum of one vessel 
-\emph{instance} may inabit any given slot.
+\emph{instance} may inhabit any given slot.
 Note that this inequality allows for the possibility of unused slots, i.e. the
 number of occupied slots (and hence the number of preparation vessels) may be
 less than the number of available slots (and hence the number of buffers).
@@ -145,11 +188,45 @@ less than the number of available slots (and hence the number of buffers).
 \subsection{Vessel Capacity}\label{SS.constr3}
 
 The third constraint is the requirement that, if a vessel is in a given slot,
-it has sufficient volume to prepare all buffers assigned to the slot.   
+it has an appropriate volume to prepare all buffers assigned to the slot.
+There are two facets to the above statement.  
+Firstly, we cannot produce buffer volumes greater than the preparation vessel
+volume.  
+Additionally, vessels have a minimum fill ratio, ususally in the range 
+10 - 30 \%.
+This ratio is captured as the input parameter $r_{MINFILL}$.
+The minimum fill ratio is generally a function of the minimum stir volume of 
+the vessel's impeller.
+
+More complicated rules may be applied, such as the ability to make an excess
+of buffer to prevent the requirement for adding a smaller vessel, but such
+approaches are beyond the scope of this basic model.
+
+Recall that for each vessel size, $m \in M$, we have defined a (maximum) vessel
+volume, $V_{m}$. Also, for each buffer, $n \in N$, we have defined the required
+volume, $U_{n}$. 
+
+The maximum vessel capacity constraint is:
         
 \begin{equation}
-    \sum_{m \in M} U_{n} \boldsymbol{x}_{np} - V_{m} \boldsymbol{y}_{mp} \le 0
+    U_{n} \boldsymbol{x}_{np} - \sum_{m \in M} V_{m} \boldsymbol{y}_{mp} \le 0
     \quad \forall n \in N, \quad \forall p \in P
+\end{equation}
+
+The minimum vessel capacity constraint is slightly more complex, in that the
+\emph{big-M} method must be utilised. The value used for \emph{big-M} is
+$V_{MAX}$, where:
+
+\begin{equation}
+    V_{MAX} = \text{max} \left( V_{m} \right) \quad \forall m \in M
+\end{equation}
+
+The minimum vessel capacity constraint is defined as:
+
+\begin{equation}
+    V_{MAX} \boldsymbol{x}_{np} + r_{MINFILL} \sum_{m \in M} V_{m} 
+    \boldsymbol{y}_{mp} \le U_{n} + V_{MAX} \quad \forall n \in N, \quad
+    \forall p \in P
 \end{equation}
 
 \subsection{Hold Procedure Duration}\label{SS.constr4}
@@ -231,7 +308,7 @@ constraints.
 To overcome these issues, several additional constraints and variables must be
 introduced.
 
-\subsection{Pairs of Distict Buffers Prepared in a Particular Slot}\label{SS.constr6}
+\subsection{Pairs of Distinct Buffers Prepared in a Particular Slot}\label{SS.constr6}
 
 Firstly, we want to specify a binary variable which indicates if two distinct
 buffers are made in the same slot.  
@@ -383,6 +460,17 @@ pair of constraints:
     \end{split}
 \end{equation}
 
+
+\begin{center}
+    \begin{tabular}{c | c}
+        $t_{USE,n}^{\prime} - \boldsymbol{z}_{n}$ 
+        & $\boldsymbol{q}_{n}$\\ \hline
+        <0 & 0\\
+        0 & $\left\{ 0, 1 \right\}$\\
+        >0 & 1\\
+    \end{tabular}
+\end{center}
+
 Having incorporated $ \boldsymbol{q}_{n} $, we can now implement the pair of 
 constraints which, given two distinct buffers, indicate which is prepared
 first.
@@ -398,6 +486,35 @@ first.
     \end{split}
     \quad \quad \forall n \in N, \quad \forall k \in N, k > n
 \end{equation}
+
+\begin{center}
+    \begin{tabular}{c c c | c c | c}
+        $\left( t_{USE,k}^{\prime} - \boldsymbol{z}_{k} \right)
+            - \left( t_{USE,n}^{\prime} - \boldsymbol{z}_{n} \right)$ 
+        & $\boldsymbol{q}_{n}$ & $\boldsymbol{q}_{k}$ 
+        & $\boldsymbol{u}_{nk}^{\left( 1 \right)}$ 
+        & $\boldsymbol{u}_{nk}^{\left( 2 \right)}$
+        & $\boldsymbol{u}_{nk} = \boldsymbol{u}_{nk}^{\left( 1 \right)}
+            \land \boldsymbol{u}_{nk}^{\left( 2 \right)}$\\ \hline
+        <0 & 0 & 0 & 1 & $\left\{ 0,1 \right\}$& 1\\
+        <0 & 0 & 1 & $\left\{ 0,1 \right\}$ & 0 & 0\\
+        <0 & 1 & 0 & N/A & $\left\{ 0,1 \right\}$ & N/A\\
+        <0 & 1 & 1 & $\left\{ 0,1 \right\}$ & 1 & 1\\
+        0 & 0 & 0 & $\left\{ 0,1 \right\}$ & $\left\{ 0,1 \right\}$ 
+            & $\left\{ 0,1 \right\}$\\
+        0 & 0 & 1 & $\left\{ 0,1 \right\}$ & 0 & 0\\
+        0 & 1 & 0 & 1 & $\left\{ 0,1 \right\}$ & 1\\
+        0 & 1 & 1 & $\left\{ 0,1 \right\}$ & $\left\{ 0,1 \right\}$
+        & $\left\{ 0,1 \right\}$\\
+        >0 & 0 & 0 & $\left\{ 0,1 \right\}$ & 0 & 0\\
+        >0 & 0 & 1 & $\left\{ 0,1 \right\}$ & N/A & N/A\\
+        >0 & 1 & 0 & 1 & $\left\{ 0,1 \right\}$ & 1\\
+        >0 & 1 & 1 & $\left\{ 0,1 \right\}$ & 0 & 0\\
+    \end{tabular}
+\end{center}
+
+The above truth table seems counterintuitive -- check to make sure it's
+correct.
 
 \subsection{Preparation Scheduling}\label{SS.constr9}
 
@@ -419,5 +536,26 @@ With the above constraint, we can finally implement the scheduling constraint:
     \end{split}
 \end{equation}
 
+where
 
+\begin{equation}
+    \mathbb{M} = 2 \lambda
+\end{equation}
+
+Truth table:
+
+\begin{center}
+    \begin{tabular}{c c | c}
+        $\boldsymbol{u}_{nk}$ & $\boldsymbol{v}_{nk}$ 
+        & applicable scheduling constraint\\ \hline
+        0 & 0 & none\\
+        0 & 1 & $\left( t_{USE,k}^{\prime} - \boldsymbol{z}_{k} \right)
+            - \left( t_{USE,n}^{\prime} - \boldsymbol{z}_{n} \right)
+            \ge \Delta t_{PREP,TOTAL}$\\
+        1 & 0 & none\\
+        1 & 1 & $\left( t_{USE,n}^{\prime} - \boldsymbol{z}_{n} \right)
+            - \left( t_{USE,k}^{\prime} - \boldsymbol{z}_{k} \right)
+            \ge \Delta t_{PREP,TOTAL}$\\
+    \end{tabular}
+\end{center}
 % TODO: Truth Tables
