--- a/tex/ch4.tex
+++ b/tex/ch4.tex
@@ -78,7 +78,7 @@ PuLP is an open-source python library which acts as an API to several
 To model the probem as an MILP problem, we must introduce the concept of
 \emph{slots}.
 Noting that there is a buffer hold vessel for each buffer, it is evident that 
-a feasible, but inefficient, solution could involve installing a dedicated,
+a feasible but inefficient solution could involve installing a dedicated,
 suitably sized, preparation vessel for each hold vessel.  
 Any solution involving more than this number of preparation vessels would not
 be optimal.
@@ -90,10 +90,10 @@ The model is thus constructed with $P$ \emph{slots}, where
     P = N
 \end{equation}
 
-and a slot is a notional space which may be occupied by a vessel, or may be
-empty.
-Note that slots do not have any physical significance, i.e. there is no floor
-space assigned to notional slots, only to actual vessels.
+and a \emph{slot} is a notional space which may be occupied by a vessel, or may
+be empty.
+Note that slots do not have any physical significance, i.e. in a physical
+plant, floor sapce is assgined to physical vessels, rather than notional slots.
 
 \section{Objective Function}\label{S.objfn}
 
@@ -111,6 +111,7 @@ Note that binary decision variables may only take the values 0 and 1, i.e.
 \begin{equation}
     \boldsymbol{y}_{mp} \in \left\{ 0, 1 \right\} \quad \forall m \in M \quad
     \forall p \in P
+    \label{eq.y}
 \end{equation}
 
 The possible states of $\boldsymbol{y}_{mp}$ may be described thus:
@@ -128,9 +129,10 @@ value, $\boldsymbol{Z}$.  The objective is to minimise $\boldsymbol{Z}$.
 
 \begin{equation}
     \boldsymbol{Z} = \sum_{m \in M} \sum_{p \in P} c_m \boldsymbol{y}_{mp}
+    \label{eq.objfn}
 \end{equation} 
 
-\section{Basic Problem}\label{S.basicprob}
+\section{Basic Model}\label{S.basicprob}
 
 A small number of constraints need to be applied to arrive at the simplest 
 variant of the problem.
@@ -152,8 +154,10 @@ otherwise, i.e.
 \begin{equation}
     \boldsymbol{x}_{np} \in \left\{ 0, 1 \right\} \quad \forall n \in N \quad
     \forall p \in P
+    \label{eq.x}
 \end{equation}
 
+Note that $\boldsymbol{x}_{np}$ has dimensions of $N \times P$.
 The possible states of $\boldsymbol{x}_{np}$ may be described thus:
 
 \begin{equation}
@@ -168,6 +172,7 @@ The following constraint can now be defined:
 
 \begin{equation}
     \sum_{p \in P} \boldsymbol{x}_{np} = 1 \quad \forall n \in N
+    \label{eq.constr1}
 \end{equation}
 
 \subsection{Vessel Instances Dedicated to Slots}\label{SS.constr2}
@@ -183,6 +188,7 @@ less than the number of available slots (and hence the number of buffers).
 
 \begin{equation}
     \sum_{m \in M} \boldsymbol{y}_{mp} \le 1 \quad \forall p \in P
+    \label{eq.constr2}
 \end{equation}
 
 \subsection{Vessel Capacity}\label{SS.constr3}
@@ -191,12 +197,11 @@ The third constraint is the requirement that, if a vessel is in a given slot,
 it has an appropriate volume to prepare all buffers assigned to the slot.
 There are two facets to the above statement.  
 Firstly, we cannot produce buffer volumes greater than the preparation vessel
-volume.  
-Additionally, vessels have a minimum fill ratio, ususally in the range 
+maximum working volume.  
+Additionally, vessels have a minimum fill ratio, $r_{MINFILL}$, ususally in the range 
 10 - 30 \%.
-This ratio is captured as the input parameter $r_{MINFILL}$.
-The minimum fill ratio is generally a function of the minimum stir volume of 
-the vessel's impeller.
+The minimum fill ratio is generally a function of the minimum stir volume of a
+vessel's impeller.
 
 More complicated rules may be applied, such as the ability to make an excess
 of buffer to prevent the requirement for adding a smaller vessel, but such
@@ -211,6 +216,7 @@ The maximum vessel capacity constraint is:
 \begin{equation}
     U_{n} \boldsymbol{x}_{np} - \sum_{m \in M} V_{m} \boldsymbol{y}_{mp} \le 0
     \quad \forall n \in N, \quad \forall p \in P
+    \label{eq.constr3a}
 \end{equation}
 
 The minimum vessel capacity constraint is slightly more complex, in that the
@@ -218,7 +224,7 @@ The minimum vessel capacity constraint is slightly more complex, in that the
 $V_{MAX}$, where:
 
 \begin{equation}
-    V_{MAX} = \text{max} \left( V_{m} \right) \quad \forall m \in M
+    V_{MAX} = \text{max} \left( V_{m} \quad \forall m \in M \right)
 \end{equation}
 
 The minimum vessel capacity constraint is defined as:
@@ -227,12 +233,131 @@ The minimum vessel capacity constraint is defined as:
     V_{MAX} \boldsymbol{x}_{np} + r_{MINFILL} \sum_{m \in M} V_{m} 
     \boldsymbol{y}_{mp} \le U_{n} + V_{MAX} \quad \forall n \in N, \quad
     \forall p \in P
+    \label{eq.constr3b}
 \end{equation}
 
-\subsection{Hold Procedure Duration}\label{SS.constr4}
+\subsection{Preparation Vessel Utilisation}\label{SS.constr4}
 
-The fourth constraint required for a basic model is the limitation that the
-total duration of each hold prcedure must not be greater than the cycle time.
+In the absence of detailed scheduling data (i.e. knowledge of when the buffers
+are used by the process and their durations of use), an allowance can be made
+for unknown scheduling constraints by limiting the maximum allowed utilisation
+of the preparation vessels.  
+Note that this will result in a crude approximation but it is often the case
+that detailed timing information is not available or cannot be predicted with
+sufficient accuracy.
+We thus introduce the parameter $r_{UTIL}$, the maximum utilisation ratio.
+The total duration of all preparation procedures in a given slot must not
+be above $r_{UTIL} \lambda$, where $\lambda$ is the cycle time of the process.
+
+The total duration of a single preparation procedure, $\Delta t_{PREP,TOTAL}$,
+is given by:
+
+\begin{equation}
+    \Delta t_{PREP,TOTAL} = \Delta t_{PREP,PRE} + \Delta t_{TRANSFER} +
+    \Delta t_{PREP,POST}  
+\end{equation}
+
+Note that, for the basic case, it is only strictly necessary to know
+$\Delta t_{PREP,TOTAL}$; the constituent durations do not need to be known
+individually.
+
+The following constraint is now defined:
+
+\begin{equation}
+    \Delta t_{PREP,TOTAL} \sum_{n \in N} \boldsymbol{x}_{np} \le r_{UTIL} 
+    \lambda \quad \forall p \in P
+    \label{eq.constr4}
+\end{equation}
+
+\subsection{Basic Model Summary}\label{SS.basicsummary}
+
+The basic model is summarised below.
+
+Minimise:
+
+\begin{equation}
+    \boldsymbol{Z} = \sum_{m \in M} \sum_{p \in P} c_m \boldsymbol{y}_{mp}
+    \tag{\ref{eq.objfn}}
+\end{equation}
+
+Subject to:
+
+\begin{equation}
+    \sum_{p \in P} \boldsymbol{x}_{np} = 1 \quad \forall n \in N
+    \tag{\ref{eq.constr1}}
+\end{equation}
+
+\begin{equation}
+    \sum_{m \in M} \boldsymbol{y}_{mp} \le 1 \quad \forall p \in P
+    \tag{\ref{eq.constr2}}
+\end{equation}
+
+\begin{equation}
+    U_{n} \boldsymbol{x}_{np} - \sum_{m \in M} V_{m} \boldsymbol{y}_{mp} \le 0
+    \quad \forall n \in N, \quad \forall p \in P
+    \tag{\ref{eq.constr3a}}
+\end{equation}
+
+\begin{equation}
+    V_{MAX} \boldsymbol{x}_{np} + r_{MINFILL} \sum_{m \in M} V_{m} 
+    \boldsymbol{y}_{mp} \le U_{n} + V_{MAX} \quad \forall n \in N, \quad
+    \forall p \in P
+    \tag{\ref{eq.constr3b}}
+\end{equation}
+
+\begin{equation}
+    \Delta t_{PREP,TOTAL} \sum_{n \in N} \boldsymbol{x}_{np} \le r_{UTIL} 
+    \lambda \quad \forall p \in P
+    \tag{\ref{eq.constr4}}
+\end{equation}
+
+Where:
+
+\begin{equation}
+    \boldsymbol{x}_{np} \in \left\{ 0, 1 \right\} \quad \forall n \in N \quad
+    \forall p \in P
+    \tag{\ref{eq.x}}
+\end{equation}
+
+\begin{equation}
+    \boldsymbol{y}_{mp} \in \left\{ 0, 1 \right\} \quad \forall m \in M \quad
+    \forall p \in P
+    \tag{\ref{eq.y}}
+\end{equation}
+
+
+\section{Complete Model}\label{S.prepsched}
+
+For a more accurate appraisal of vessel requirements, more data are required
+on scheduling.
+Specifically, data are required on the duration of use of each buffer, along
+with data on the time of first use of each buffer, relative to some fixed point
+in a batch (e.g. batch start).
+Given this information, it is possible to constrain the problem so that the
+individual preparations are scheduled correctly.
+
+For each buffer, constraints covering both the scheduling of the preparation procedures and the scheduling of the hold procedures must be added.
+The scheduling of the hold procedures is quite straightforward; since the hold
+vessels are dedicated, we simple need to ensure that the total duration of each
+hold procedure is not greater than the cycle time.
+The scheduling of the preparation procedures is more complex, despite these
+procedures being of fixed duration.
+
+\subsection{Hold Procedure Duration}\label{SS.constr5}
+
+We now intoduce the buffer hold time decision variable, $\boldsymbol{z}_{n}$,
+which has dimensions of $N$:
+
+\begin{equation}
+    \Delta t_{HOLD,MIN} \le \boldsymbol{z}_{n} \le \Delta t_{HOLD,MAX}; \quad
+    \boldsymbol{z}_{n} \in \mathbb{R} \quad \forall n \in N
+    \label{eq.z}
+\end{equation}
+
+This is the only real-valued variable in the model.
+
+The first constraint required for the complete model is the limitation that the
+total duration of each hold procedure must not be greater than the cycle time.
 If this constraint is not observed, a hold procedure in a given batch may not
 have finished before the hold procedure for the next batch is due to start.
 
@@ -240,51 +365,11 @@ have finished before the hold procedure for the next batch is due to start.
     \boldsymbol{z}_{n} \le \lambda - \left( \Delta t_{HOLD,PRE} +
     \Delta t_{TRANSFER} + \Delta t_{USE,n} + \Delta t_{HOLD,POST} \right)
     \quad \forall n \in N
+    \label{eq.constr5}
 \end{equation}
 
-\subsection{Preparation Vessel Utilisation}\label{SS.constr5}
+\subsection{Introducing the Scheduling Constraint}\label{SS.schedintro}
 
-The final constraint required for a basic model is similar to the above.
-We wish to ensure that, in a given slot, the sum of the total durations of each
-preparation procedure in that slot is not greater than the cycle time.
-If this were not the case, for a given slot, there would be insufficient
-time to carry out all the preparations assigned to that slot.
-Note that at this point, we have not concerned ourselves with \emph{when}
-the buffers are required by the process -- indeed, perhaps this information is
-not available early in a design project.
-To make the model more realistic, we can modify this constraint so that sum of
-the total durations mentioned above is not greater than some fraction of the
-cycle time, the \emph{maximum utilisation ratio}.
-By applying this constraint, we are saying that, in the absence of any detailed
-scheduling data, we want to ensure that out preparation vessels
-are used less than, e.g. 60\% of the time.
-
-\begin{equation}
-    \Delta t_{PREP,TOTAL} \sum_{n \in N} \boldsymbol{x}_{np} \le r_{UTIL} 
-    \lambda \quad \forall p \in P
-\end{equation}
-
-where
-
-\begin{equation}
-    \Delta t_{PREP,TOTAL} = \Delta t_{PREP,PRE} + \Delta t_{TRANSFER} +
-    \Delta t_{PREP,POST}  
-\end{equation}
-
-The above model may be solved to produce a vessel selection.
-The resultant selection would be a rough guide, in the absence of production
-scheduling information, of the number and size of vessels required for a 
-facility, using the maximum utilisation ratio as a proxy for a schedule.
-
-\section{Preparation Scheduling Constraints}\label{S.prepsched}
-
-For a more accurate appraisal of vessel requirements, more data is required
-on scheduling.
-Specifically, data are required on the duration of use of each buffer, along
-with data on the time of first use of each buffer, relative to some fixed point
-in a batch (e.g. batch start).
-Given this information, it is possible to constrain the problem so that the
-individual preparations are scheduled correctly.
 The scheduling constraint may be descibed quite simply:
 Ensure that no two preparation operations overlap in time in a given slot.
 
@@ -294,7 +379,7 @@ in the same slot}, by the following:
 
 \begin{equation}
     \lvert \left( t_{USE,k} - \boldsymbol{z}_{k} \right) - \left( t_{USE,n} - 
-    \boldsymbol{z}_{n} \right) \rvert \le \Delta t_{USE,TOTAL} \quad \forall n 
+    \boldsymbol{z}_{n} \right) \rvert \le \Delta t_{PREP,TOTAL} \quad \forall n 
     \in N, \quad \forall k \in N, k > n
 \end{equation}
 
@@ -312,10 +397,20 @@ introduced.
 
 Firstly, we want to specify a binary variable which indicates if two distinct
 buffers are made in the same slot.  
-This, in turn requres an additional binary variable which indicates if two
+This, in turn requires an additional binary variable which indicates if two
 distinct buffers are made in a \emph{particular} slot.
-The latter binary variable, $ \boldsymbol{w}_{nkp} $ is defined through a pair
-of constraints:
+The latter binary variable, $ \boldsymbol{w}_{nkp} $ is defined below.
+
+\begin{equation}
+    \boldsymbol{w}_{nkp} \in \left\{ 0, 1 \right\} \quad \forall n \in N \quad
+    \forall k \in N \quad \forall p \in P
+    \label{eq.w}
+\end{equation}
+
+Note that the above variable has dimensions $N \times N \times P$, but we don't
+need each constituent binary variable to describe the problem.
+Since $w_{nnp}$ is not required and $w_{nkp} = w_{knp}$, we only need to 
+describe constraints where $k > n$.
 
 \begin{equation}
     \begin{split}
@@ -330,6 +425,7 @@ of constraints:
     \begin{split}
         \forall n \in N, \quad \forall k \in N, k > n
     \end{split}
+    \label{eq.constr6}
 \end{equation}
 
 A truth table for the above constraints is given below.
@@ -355,16 +451,24 @@ $\boldsymbol{w}_{nkp} = \boldsymbol{w}_{nkp}^{\left( 1 \right)} \land
     \end{tabular}
 \end{center}
 
-\subsection{Pairs of Distict Buffers Prepared in the Same Slot}\label{SS.constr7}
+\subsection{Pairs of Distinct Buffers Prepared in the Same Slot}\label{SS.constr7}
 
 Given the above constraint, we can now define a binary variable, 
 $ \boldsymbol{v}_{nk} $ which indicates if two distinct buffers are made in the
 same slot.
-This new varaible is introduced via the following constraint:
+
+\begin{equation}
+    \boldsymbol{v}_{nk} \in \left\{ 0, 1 \right\} \quad \forall n \in N \quad
+    \forall k \in N
+    \label{eq.v}
+\end{equation}
+
+This new variable is introduced via the following constraint:
 
 \begin{equation}
     \sum_{p \in P} \boldsymbol{w}_{nkp} - \boldsymbol{v}_{nk} \le 0 \quad
     \forall n \in N, \quad \forall k \in N, k > n
+    \label{eq.constr7}
 \end{equation}
 
 The truth table for the above constraint, for a given $n$ and $k$ is detailed
@@ -391,6 +495,9 @@ constraints, e.g.
 $ \lvert \alpha - \beta \rvert \ge \gamma $
 is essentially shorthand for
 $ \alpha - \beta \ge \gamma \quad \lor \quad \beta - \alpha \ge \gamma $. 
+%TODO:
+\textbf{Not strictly true... if statement ... implement case equation without
+a reference number}
 We now need to remove the logical-or ($\lor$) from the above pair of
 inequalities.
 This can be done by using the \emph{big-M} method, whereby a large constant,
@@ -399,11 +506,20 @@ based on the value of an additional binary.
 In our case, the absolute value function represents two cases.
 In one case, buffer $n$ is prepared before another buffer $k$, and in the
 alternate case, buffer $k$ is prepared after buffer $n$.
-We thus define a binary, $\boldsymbol{u}_{nk}$, such that
+We therefore define a binary decision variable, $\boldsymbol{u}_{nk}$:
+
+\begin{equation}
+    \boldsymbol{u}_{nk} \in \left\{ 0, 1 \right\} \quad \forall n \in N \quad
+    \forall k \in N
+    \label{eq.u}
+\end{equation}
+
 $ \boldsymbol{u}_{nk} = 0 $ if $n$ is prepared before $k$ and
 $ \boldsymbol{u}_{nk} = 1 $ if $k$ is prepared before $n$.
 In the edge case where the buffers are prepared at precisely the same time,
 the binary may take either value.
+%TODO:
+\textbf{Implement case eqution here, similar to those for x and y}
 
 We are not yet ready to define the constraint which governs the value of
 $\boldsymbol{u}_{nk}$.
@@ -420,6 +536,8 @@ steady-state cyclic case, so we use a modified use start time:
 
 We want to now rigorously define whether an event, $\alpha$, occurs after
 another event, $\beta$, iff $ \alpha \mod \lambda > \beta \mod \lambda $.
+%TODO
+\textbf{double-check this logic}
 We are concerned with the timing of our preparation procedures.
 Recall that all preparation procedures have the same durations.
 Thus, when deciding which of two such procedures occurs first, we can use 
@@ -429,15 +547,11 @@ Note that this may take a negative value, which must be corrected by adding a
 factor of $\lambda$ to bring the vaue back into the single-cycle range, as we
 can't use a modulo expression in an MILP constraint.
 Another binary variable, $ \boldsymbol{q}_{n} $ is introduced to indicate if
-$ t_{USE,n}^{\prime} - \boldsymbol{z}_{n} < 0 $, i.e. 
-
+$ t_{USE,n}^{\prime} - \boldsymbol{z}_{n} < 0 $:
+ 
 \begin{equation}
-    \boldsymbol{q}_{n} =
-    \begin{cases}
-        1 \implies t_{USE,n}^{\prime} - \boldsymbol{z}_{n} \le 0\\
-        0 \implies t_{USE,n}^{\prime} - \boldsymbol{z}_{n} \ge 0
-    \end{cases}
-    \quad \forall n \in N
+    \boldsymbol{q}_{n} \in \left\{ 0, 1 \right\} \quad \forall n \in N
+    \label{eq.q}
 \end{equation}
 
 Note that the value of $ \boldsymbol{q}_{n} $ is undefined if 
@@ -458,8 +572,14 @@ pair of constraints:
     \begin{split}
         \forall n \in N
     \end{split}
+    \label{eq.constr8a}
 \end{equation}
 
+%TODO:
+\textbf{Explain that $q_{n}$ is used to ensure () remains between 0 and
+    $\lambda$}
+    
+The truth table for $ \boldsymbol{q}_{n} $ is given below.
 
 \begin{center}
     \begin{tabular}{c | c}
@@ -477,69 +597,53 @@ first.
 
 \begin{equation}
     \begin{split}
-        \boldsymbol{z}_{n} - \boldsymbol{z}_{k} + \lambda \boldsymbol{u}_{nk}
-        - \lambda \boldsymbol{q}_{n} + \lambda \boldsymbol{q}_{k} &\ge 
+        \boldsymbol{z}_{n} - \boldsymbol{z}_{k} - \lambda \boldsymbol{q}_{n}
+        + \lambda \boldsymbol{q}_{k} + \lambda \boldsymbol{u}_{nk} &\ge 
         t_{USE,n}^{\prime} - t_{USE,k}^{\prime}\\
-        \boldsymbol{z}_{n} - \boldsymbol{z}_{k} + \lambda \boldsymbol{u}_{nk}
-        - \lambda \boldsymbol{q}_{n} + \lambda \boldsymbol{q}_{k} &\le 
+        \boldsymbol{z}_{n} - \boldsymbol{z}_{k} - \lambda \boldsymbol{q}_{n}
+        + \lambda \boldsymbol{q}_{k} + \lambda \boldsymbol{u}_{nk} &\le 
         t_{USE,n}^{\prime} - t_{USE,k}^{\prime} + \lambda
     \end{split}
     \quad \quad \forall n \in N, \quad \forall k \in N, k > n
+    \label{eq.constr8b}
 \end{equation}
 
 \begin{center}
-    \begin{tabular}{c c c | c c | c}
-        $\left( t_{USE,k}^{\prime} - \boldsymbol{z}_{k} \right)
-            - \left( t_{USE,n}^{\prime} - \boldsymbol{z}_{n} \right)$ 
-        & $\boldsymbol{q}_{n}$ & $\boldsymbol{q}_{k}$ 
+    \begin{tabular}{c | c c | c}
+        $\left( t_{USE,k}^{\prime} + \lambda \boldsymbol{q}_{k} 
+            - \boldsymbol{z}_{k} \right) - \left( t_{USE,n}^{\prime} 
+            + \lambda \boldsymbol{q}_{n}- \boldsymbol{z}_{n} \right)$ 
         & $\boldsymbol{u}_{nk}^{\left( 1 \right)}$ 
         & $\boldsymbol{u}_{nk}^{\left( 2 \right)}$
         & $\boldsymbol{u}_{nk} = \boldsymbol{u}_{nk}^{\left( 1 \right)}
             \land \boldsymbol{u}_{nk}^{\left( 2 \right)}$\\ \hline
-        <0 & 0 & 0 & 1 & $\left\{ 0,1 \right\}$& 1\\
-        <0 & 0 & 1 & $\left\{ 0,1 \right\}$ & 0 & 0\\
-        <0 & 1 & 0 & N/A & $\left\{ 0,1 \right\}$ & N/A\\
-        <0 & 1 & 1 & $\left\{ 0,1 \right\}$ & 1 & 1\\
-        0 & 0 & 0 & $\left\{ 0,1 \right\}$ & $\left\{ 0,1 \right\}$ 
+        <0 & $\left\{ 0,1 \right\}$ & 0 & 0\\
+        0 & $\left\{ 0,1 \right\}$ & $\left\{ 0,1 \right\}$ 
             & $\left\{ 0,1 \right\}$\\
-        0 & 0 & 1 & $\left\{ 0,1 \right\}$ & 0 & 0\\
-        0 & 1 & 0 & 1 & $\left\{ 0,1 \right\}$ & 1\\
-        0 & 1 & 1 & $\left\{ 0,1 \right\}$ & $\left\{ 0,1 \right\}$
-        & $\left\{ 0,1 \right\}$\\
-        >0 & 0 & 0 & $\left\{ 0,1 \right\}$ & 0 & 0\\
-        >0 & 0 & 1 & $\left\{ 0,1 \right\}$ & N/A & N/A\\
-        >0 & 1 & 0 & 1 & $\left\{ 0,1 \right\}$ & 1\\
-        >0 & 1 & 1 & $\left\{ 0,1 \right\}$ & 0 & 0\\
+        >0 & 1 & $\left\{ 0,1 \right\}$& 1\\
     \end{tabular}
 \end{center}
 
-The above truth table seems counterintuitive -- check to make sure it's
-correct.
-
 \subsection{Preparation Scheduling}\label{SS.constr9}
 
-With the above constraint, we can finally implement the scheduling constraint:
+With the above constraint, we can finally implement the scheduling constraint.
+THis makes use of the \emph{big-M} method, with $\mathbb{M} = 2 \lambda$.
 
 \begin{equation}
     \begin{split}
         \begin{alignedat}{10}
-        &\boldsymbol{z}_{n} {}-{} &\boldsymbol{z}_{k} {}+{} &\mathbb{M}
-        \boldsymbol{u}_{nk} {}-{} &\mathbb{M} \boldsymbol{v}_{nk} &\ge
+        &\boldsymbol{z}_{n} {}-{} &\boldsymbol{z}_{k} {}+{} &2 \lambda
+        \boldsymbol{u}_{nk} {}-{} &2 \lambda \boldsymbol{v}_{nk} &\ge
         &t_{USE,n}^{\prime} {}-{} &t_{USE,k}^{\prime} {}+{}
-        &\Delta &t_{PREP,TOTAL} {}-{} &\mathbb{M}\\
-        - &\boldsymbol{z}_{n} {}+{} &\boldsymbol{z}_{k} {}-{} &\mathbb{M}
-        \boldsymbol{u}_{nk} {}-{} &\mathbb{M} \boldsymbol{v}_{nk} &\ge
+        &\Delta &t_{PREP,TOTAL} {}-{} 2 &\lambda\\
+        - &\boldsymbol{z}_{n} {}+{} &\boldsymbol{z}_{k} {}-{} &2 \lambda
+        \boldsymbol{u}_{nk} {}-{} &2 \lambda \boldsymbol{v}_{nk} &\ge
         - &t_{USE,n}^{\prime} {}+{} &t_{USE,k}^{\prime} {}+{}
-        &\Delta &t_{PREP,TOTAL} {}-{} 2 &\mathbb{M}
+        &\Delta &t_{PREP,TOTAL} {}-{} 4 &\lambda
         \end{alignedat}
         \\\forall n \in N, \quad \forall k \in N, k > n
     \end{split}
-\end{equation}
-
-where
-
-\begin{equation}
-    \mathbb{M} = 2 \lambda
+    \label{eq.constr9}
 \end{equation}
 
 Truth table:
@@ -548,14 +652,186 @@ Truth table:
     \begin{tabular}{c c | c}
         $\boldsymbol{u}_{nk}$ & $\boldsymbol{v}_{nk}$ 
         & applicable scheduling constraint\\ \hline
-        0 & 0 & none\\
+        0 & 0 & none (buffers prepared in different slots)\\
         0 & 1 & $\left( t_{USE,k}^{\prime} - \boldsymbol{z}_{k} \right)
             - \left( t_{USE,n}^{\prime} - \boldsymbol{z}_{n} \right)
             \ge \Delta t_{PREP,TOTAL}$\\
-        1 & 0 & none\\
+        1 & 0 & none (buffers prepared in different slots)  \\
         1 & 1 & $\left( t_{USE,n}^{\prime} - \boldsymbol{z}_{n} \right)
             - \left( t_{USE,k}^{\prime} - \boldsymbol{z}_{k} \right)
             \ge \Delta t_{PREP,TOTAL}$\\
     \end{tabular}
 \end{center}
-% TODO: Truth Tables
+
+\subsection{Complete Model Summary}\label{SS.completesummary}
+
+The complete model is summarised below.
+
+Minimise:
+
+\begin{equation}
+    \boldsymbol{Z} = \sum_{m \in M} \sum_{p \in P} c_m \boldsymbol{y}_{mp}
+    \tag{\ref{eq.objfn}}
+\end{equation}
+
+Subject to:
+
+\begin{equation}
+    \sum_{p \in P} \boldsymbol{x}_{np} = 1 \quad \forall n \in N
+    \tag{\ref{eq.constr1}}
+\end{equation}
+
+\begin{equation}
+    \sum_{m \in M} \boldsymbol{y}_{mp} \le 1 \quad \forall p \in P
+    \tag{\ref{eq.constr2}}
+\end{equation}
+
+\begin{equation}
+    U_{n} \boldsymbol{x}_{np} - \sum_{m \in M} V_{m} \boldsymbol{y}_{mp} \le 0
+    \quad \forall n \in N, \quad \forall p \in P
+    \tag{\ref{eq.constr3a}}
+\end{equation}
+
+\begin{equation}
+    V_{MAX} \boldsymbol{x}_{np} + r_{MINFILL} \sum_{m \in M} V_{m} 
+    \boldsymbol{y}_{mp} \le U_{n} + V_{MAX} \quad \forall n \in N, \quad
+    \forall p \in P
+    \tag{\ref{eq.constr3b}}
+\end{equation}
+
+\begin{equation}
+    \Delta t_{PREP,TOTAL} \sum_{n \in N} \boldsymbol{x}_{np} \le r_{UTIL} 
+    \lambda \quad \forall p \in P
+    \tag{\ref{eq.constr4}}
+\end{equation}
+
+\begin{equation}
+    \boldsymbol{z}_{n} \le \lambda - \left( \Delta t_{HOLD,PRE} +
+    \Delta t_{TRANSFER} + \Delta t_{USE,n} + \Delta t_{HOLD,POST} \right)
+    \quad \forall n \in N
+    \tag{\ref{eq.constr5}}
+\end{equation}
+
+\begin{equation}
+    \begin{split}
+        \begin{alignedat}{3}
+            \boldsymbol{x}_{np} & {}+{} & \boldsymbol{x}_{kp} & {}-{} & 2 
+            \boldsymbol{w}_{nkp} & \ge 0\\
+            \boldsymbol{x}_{np} & {}+{} & \boldsymbol{x}_{kp} & {}-{} &
+            \boldsymbol{w}_{nkp} & \le 1\\
+        \end{alignedat}
+    \end{split}
+    \quad\quad
+    \begin{split}
+        \forall n \in N, \quad \forall k \in N, k > n
+    \end{split}
+    \tag{\ref{eq.constr6}}
+\end{equation}
+
+\begin{equation}
+    \sum_{p \in P} \boldsymbol{w}_{nkp} - \boldsymbol{v}_{nk} \le 0 \quad
+    \forall n \in N, \quad \forall k \in N, k > n
+    \tag{\ref{eq.constr7}}
+\end{equation}
+
+\begin{equation}
+    \begin{split}
+        \begin{alignedat}{2}
+            \boldsymbol{z}_{n} & {}-{} & \lambda \boldsymbol{q}_{n} & \le 
+            t_{USE,n}^{\prime}\\
+            \boldsymbol{z}_{n} & {}-{} & \lambda \boldsymbol{q}_{n} & \ge 
+            t_{USE,n}^{\prime} - \lambda
+        \end{alignedat}
+    \end{split}
+    \quad\quad
+    \begin{split}
+        \forall n \in N
+    \end{split}
+    \tag{\ref{eq.constr8a}}
+\end{equation}
+
+\begin{equation}
+    \begin{split}
+        \boldsymbol{z}_{n} - \boldsymbol{z}_{k} + \lambda \boldsymbol{u}_{nk}
+        - \lambda \boldsymbol{q}_{n} + \lambda \boldsymbol{q}_{k} &\ge 
+        t_{USE,n}^{\prime} - t_{USE,k}^{\prime}\\
+        \boldsymbol{z}_{n} - \boldsymbol{z}_{k} + \lambda \boldsymbol{u}_{nk}
+        - \lambda \boldsymbol{q}_{n} + \lambda \boldsymbol{q}_{k} &\le 
+        t_{USE,n}^{\prime} - t_{USE,k}^{\prime} + \lambda
+    \end{split}
+    \quad \quad \forall n \in N, \quad \forall k \in N, k > n
+    \tag{\ref{eq.constr8b}}
+\end{equation}
+
+\begin{equation}
+    \begin{split}
+        \begin{alignedat}{10}
+        &\boldsymbol{z}_{n} {}-{} &\boldsymbol{z}_{k} {}+{} &2 \lambda
+        \boldsymbol{u}_{nk} {}-{} &2 \lambda \boldsymbol{v}_{nk} &\ge
+        &t_{USE,n}^{\prime} {}-{} &t_{USE,k}^{\prime} {}+{}
+        &\Delta &t_{PREP,TOTAL} {}-{} 2 &\lambda\\
+        - &\boldsymbol{z}_{n} {}+{} &\boldsymbol{z}_{k} {}-{} &2 \lambda
+        \boldsymbol{u}_{nk} {}-{} &2 \lambda \boldsymbol{v}_{nk} &\ge
+        - &t_{USE,n}^{\prime} {}+{} &t_{USE,k}^{\prime} {}+{}
+        &\Delta &t_{PREP,TOTAL} {}-{} 4 &\lambda
+        \end{alignedat}
+        \\\forall n \in N, \quad \forall k \in N, k > n
+    \end{split}
+    \tag{\ref{eq.constr9}}
+\end{equation}
+
+Where:
+
+\begin{equation}
+    \boldsymbol{q}_{n} \in \left\{ 0, 1 \right\} \quad \forall n \in N
+    \tag{\ref{eq.q}}
+\end{equation}
+
+\begin{equation}
+    \boldsymbol{u}_{nk} \in \left\{ 0, 1 \right\} \quad \forall n \in N \quad
+    \forall k \in N
+    \label{eq.u}
+\end{equation}
+
+\begin{equation}
+    \boldsymbol{v}_{nk} \in \left\{ 0, 1 \right\} \quad \forall n \in N \quad
+    \forall k \in N
+    \tag{\ref{eq.v}}
+\end{equation}
+
+\begin{equation}
+    \boldsymbol{w}_{nkp} \in \left\{ 0, 1 \right\} \quad \forall n \in N \quad
+    \forall k \in N \quad \forall p \in P
+    \tag{\ref{eq.w}}
+\end{equation}
+
+\begin{equation}
+    \boldsymbol{x}_{np} \in \left\{ 0, 1 \right\} \quad \forall n \in N \quad
+    \forall p \in P
+    \tag{\ref{eq.x}}
+\end{equation}
+
+\begin{equation}
+    \boldsymbol{y}_{mp} \in \left\{ 0, 1 \right\} \quad \forall m \in M \quad
+    \forall p \in P
+    \tag{\ref{eq.y}}
+\end{equation}
+
+\begin{equation}
+    \Delta t_{HOLD,MIN} \le \boldsymbol{z}_{n} \le \Delta t_{HOLD,MAX}; \quad
+    \boldsymbol{z}_{n} \in \mathbb{R} \quad \forall n \in N
+    \tag{\ref{eq.z}}
+\end{equation}
+
+\section{Implementation}\label{S.implementation}
+
+\subsection{Code and APIs etc}\label{SS.completesummary}
+
+\subsection{Goal programming}\label{SS.completesummary}
+
+\subsection{Plotting}\label{SS.completesummary}
+
+
+
+
+
